--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -122,9 +122,42 @@ nav .fa{
     text-align: center;
     padding-top: 100px;
 }
+
+.intro ul li{
+    list-style-type: none;
+    display: block;
+    padding: 8px 12px;
+    text-align: center;
+
+}
+.intro ul li a{ 
+    color: black;
+    text-decoration: none;
+    display: block;
+    font-size: 32px;
+    text-align: center;
+}
+.intro ul li::after{
+    content: '';
+    width: 0%;
+    height: 5px;
+    background: green;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.intro ul li:hover::after{
+    width: 100%;
+}  
 h1{
     font-size: 30px;
     font-weight: 600;
+    padding: 30px;
+}
+h2{
+    font-size: 30px;
+    font-weight: 600;
+    padding: 30px;
 }
 p1{
     color: black;
@@ -132,6 +165,7 @@ p1{
     font-weight: 300;
     line-height: 22px;
     padding: 30px;
+    padding-bottom: 30px;
 }
 .row{ 
     margin-top: 5%;
@@ -139,14 +173,13 @@ p1{
     justify-content: space-between;
 }
 .more-info{
-    flex-basis: 31%;
+    flex-basis: 24%;
     font-size: 14px;
     background: #009900;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-bottom: 5%;
-    padding: 20px 12px;
     box-sizing: border-box;
-    transition: 0.5s;
+    transition: 1s;
 }
 h3{
     text-align: center;
@@ -165,15 +198,48 @@ h3{
 /* Pictures of workers*/
 .pictures{
     text-align: center;
+    padding: 10px 12px;
 
 }
+.pictures ul li{
+    list-style-type: none;
+    display: block;
+    padding: 8px 12px;
+    text-align: center;
+
+}
+.pictures ul li a{ 
+    color: black;
+    text-decoration: none;
+    display: block;
+    font-size: 32px;
+    text-align: center;
+}
+.pictures ul li::after{
+    content: '';
+    width: 0%;
+    height: 5px;
+    background: green;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.pictures ul li:hover::after{
+    width: 100%;
+}  
 section div div img{
     flex-basis: 32%;
     border-radius: 20px;
     margin-bottom: 30px;
     width: 300px;
     height: 400px;
+    padding: 10px 12px;
 
+
+}
+.pictures h4{
+    font-size: 30px;
+    font-weight: 600;
 }
 
 /*-- Clients--*/
@@ -183,6 +249,32 @@ section div div img{
     text-align: center;
 
 }
+.clients ul li{
+    list-style-type: none;
+    display: block;
+    padding: 8px 12px;
+    text-align: center;
+
+}
+.clients ul li a{ 
+    color: black;
+    text-decoration: none;
+    display: block;
+    font-size: 32px;
+    text-align: center;
+}
+.clients ul li::after{
+    content: '';
+    width: 0%;
+    height: 5px;
+    background: green;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.clients ul li:hover::after{
+    width: 100%;
+}  
 .clients-col{ 
    flex-basis: 31%;
    border-radius: 10px;
@@ -196,7 +288,7 @@ section div div img{
 .clients-col h3{ 
     margin-top: 16px;
     margin-bottom: 15px;
-    text-align: left;
+    text-align: center;
 }
 .hero-btn-2{ 
     display: inline-block;
