--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -126,7 +126,7 @@ nav .fa{
 .intro ul li{
     list-style-type: none;
     display: block;
-    padding: 8px 12px;
+    padding: 12px 12px;
     text-align: center;
 
 }
@@ -139,7 +139,7 @@ nav .fa{
 }
 .intro ul li::after{
     content: '';
-    width: 0%;
+    width: 20%;
     height: 5px;
     background: green;
     display: block;
@@ -161,7 +161,7 @@ h2{
 }
 p1{
     color: black;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 300;
     line-height: 22px;
     padding: 30px;
@@ -173,8 +173,8 @@ p1{
     justify-content: space-between;
 }
 .more-info{
-    flex-basis: 24%;
-    font-size: 14px;
+    flex-basis: 20%;
+    font-size: 20px;
     background: #009900;
     border-radius: 20px;
     margin-bottom: 5%;
@@ -307,24 +307,156 @@ section div div img{
     transition: 1s;
 }
 
-/*--Footer--*/ 
-.footer{ 
-    width: 100%;
-    text-align: center;
-    padding: 30px 0;
+/* Footer */
+.footer-distributed{
+	background: rgb(22, 22, 22);
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+	padding: 55px 50px;
+}
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 40%;
+}
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
+}
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+  font-weight:400;
+	text-decoration: none;
+	color:  inherit;
+}
+.footer-distributed .footer-company-name{
+	color:  white;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
+}
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+.footer-distributed .footer-center i{
+	background-color:  darkgreen;
+	color: #ffffff;
+	font-size: 25px;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 42px;
+	margin: 10px 15px;
+	vertical-align: middle;
+}
+.footer-distributed .footer-center i.fa-envelope{
+	font-size: 17px;
+	line-height: 38px;
+}
+.footer-distributed .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+  font-weight:400;
+	vertical-align: middle;
+	margin:0;
+}
+.footer-distributed .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+.footer-distributed .footer-center p a{
+	color:  darkgreen;
+	text-decoration: none;;
+}
+.footer-distributed .footer-links a:before {
+    content: "|";
+    font-weight:300;
+    font-size: 20px;
+    left: 0;
+    color: darkgreen;
+    display: inline-block;
+    padding-right: 5px;
+  }
+  .footer-distributed .footer-links .link-1:before {
+    content: none;
+  }
+  /* Footer Right */
+
+.footer-distributed .footer-right{
+	width: 20%;
+}
+.footer-distributed .footer-company-about{
+	line-height: 20px;
+	color:  #ffffff;
+	font-size: 13px;
+	font-weight: normal;
+	margin: 0;
+}
+.footer-distributed .footer-company-about span{
+	display: block;
+	color:  #da;
+	font-size: 14px;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+.footer-distributed .footer-icons{
+	margin-top: 25px;
+}
+.footer-distributed .footer-icons a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	background-color:  darkgreen;
+	border-radius: 2px;
+
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
+
+	margin-right: 3px;
+	margin-bottom: 5px;
+}
+/* Allows for the footer to be reponsive */
+
+@media (max-width: 880px) {
+
+	.footer-distributed{
+		font: bold 14px sans-serif;
+	}
+
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-center,
+	.footer-distributed .footer-right{
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+		text-align: center;
+	}
+
+	.footer-distributed .footer-center i{
+		margin-left: 0;
+	}
+
 }
 
-.footer h4{ 
-    margin-bottom: 25px;
-    margin-top: 20px;
-    font-weight: 600;
-}
-.icons .fa{ 
-    color: #99ff99;
-    margin: 0 13px;
-    cursor: pointer;
-    padding: 18px 0;
-}
 /*About us page: Quienes Somos---*/
 .sub-header{ 
     height: 60vh;
