--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -11,6 +11,7 @@
     background-size: cover; 
     position: relative;
 }
+
 /* BUG: Properly move nav links to make space for icon*/
 .nav-linksul{
     list-style-type: none;
@@ -46,7 +47,12 @@
 .nav-links ul li:hover::after{
     width: 100%;
 }  
-
+.company-logo a img{
+    text-align: left;
+    height: 150px;
+    width: auto;
+    list-style-type: none;
+}
 /*---BUG:Find out why header isnt fully centered---*/
 .text-box{ 
     width: 100%;
@@ -246,14 +252,19 @@ section div div img{
 .clients{
     width: 80%;
     margin: auto;
-    text-align: center;
+
+}
+.clients .row{
+    display: inline;
+    flex-basis: 32%;
+    width: 300px;
+    height: 400px; 
 
 }
 .clients ul li{
     list-style-type: none;
-    display: block;
-    padding: 8px 12px;
     text-align: center;
+    padding: 8px 12px;
 
 }
 .clients ul li a{ 
@@ -261,7 +272,6 @@ section div div img{
     text-decoration: none;
     display: block;
     font-size: 32px;
-    text-align: center;
 }
 .clients ul li::after{
     content: '';
@@ -275,22 +285,9 @@ section div div img{
 .clients ul li:hover::after{
     width: 100%;
 }  
-.clients-col{ 
-   flex-basis: 31%;
-   border-radius: 10px;
-   margin-bottom: 5%;
-   text-align:left; 
-}
-.clients-col img{ 
-    width: 100%;
-    border-radius: 10px;
-}
-.clients-col h3{ 
-    margin-top: 16px;
-    margin-bottom: 15px;
-    text-align: center;
-}
-.hero-btn-2{ 
+
+.hero-btn-2{
+    text-align: center; 
     display: inline-block;
     text-decoration: none;
     color: black;
@@ -478,5 +475,4 @@ section div div img{
     font-size: 50px;
 
 }
-
 
