--- a/Enerpetrol1/contactstyle.css
+++ b/Enerpetrol1/contactstyle.css
@@ -8299,3 +8299,274 @@ textarea.form-control {
   display: none;
   font-size: 16px;
   font-weight: bold; }
+   /* BUG: Properly move nav links to make space for icon*/
+   .nav-links ul {
+    list-style-type: none;
+    margin: 10;
+    padding: 0;
+    overflow: hidden;
+    background-color: #fff;
+  }
+  .nav-links ul li {
+    list-style-type: none;
+    display: block;
+    padding: 8px 12px;
+    float: left;
+  }
+  .nav-links ul li a {
+    color: black;
+    text-decoration: none;
+    padding: 14px ;
+    text-align: left;
+    display: block;
+  }
+  .nav-links ul li::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background: darkgreen;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+  }
+  .nav-links ul li:hover::after {
+    width: 100%;
+  }
+  .company-logo a img {
+    text-align: left;
+    height: 150px;
+    width: auto;
+    list-style-type: none;
+  }
+  /*---BUG:Find out why header isnt fully centered---*/
+  .text-box {
+    width: 100%;
+    color: azure;
+    position: absolute;
+    top: 35%;
+    left: 0%;
+    right: 0%;
+    text-align: center;
+  }
+  .text-box h1 {
+    font-size: 62px;
+  }
+  .text-box p {
+    margin: 10px 0 40px;
+    font-size: 16px;
+    color: azure;
+  }
+  .hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: azure;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+  }
+  .hero-btn:hover {
+    border: 1px solid green;
+    background: green;
+    transition: 1s;
+  }
+  nav .fa {
+    display: none;
+  }
+  /* This is what makes it compatible for smaller windows*/
+  @media (max-width: 700px) {
+    .text-box h1 {
+      font-size: 20px;
+    }
+    .nav-links ul li {
+      display: block;
+    }
+    .nav-links {
+      position: absolute;
+      background: green;
+      height: 100vh;
+      width: 200px;
+      top: 0;
+      right: -200px;
+      text-align: left;
+      z-index: 2;
+      transition: 1s;
+    }
+    nav .fa {
+      display: block;
+      color: white;
+      margin: 10px;
+      font-size: 22px;
+      cursor: pointer;
+    }
+    .nav-links ul {
+      padding: 30px;
+    }
+    .hero-btn-2 {
+      text-align: center;
+      display: inline-block;
+      text-decoration: none;
+      color: black;
+      border: 5px solid green;
+      padding: 12px 34px;
+      font-size: 20px;
+      background: transparent;
+      position: relative;
+      cursor: pointer;
+    }
+    .hero-btn-2:hover {
+      border: 1px solid green;
+      background: green;
+      transition: 1s;
+    }
+    
+    /* Footer */
+    .footer-distributed {
+      background: rgb(22, 22, 22);
+      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+      box-sizing: border-box;
+      width: 100%;
+      text-align: left;
+      font: bold 16px sans-serif;
+      padding: 55px 50px;
+    }
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center,
+    .footer-distributed .footer-right {
+      display: inline-block;
+      vertical-align: top;
+    }
+    /* Footer left */
+    
+    .footer-distributed .footer-left {
+      width: 40%;
+    }
+    .footer-distributed .footer-links {
+      color: #ffffff;
+      margin: 20px 0 12px;
+      padding: 0;
+    }
+    .footer-distributed .footer-links a {
+      display: inline-block;
+      line-height: 1.8;
+      font-weight: 400;
+      text-decoration: none;
+      color: inherit;
+    }
+    .footer-distributed .footer-company-name {
+      color: white;
+      font-size: 14px;
+      font-weight: normal;
+      margin: 0;
+    }
+    /* Footer Center */
+    
+    .footer-distributed .footer-center {
+      width: 35%;
+    }
+    .footer-distributed .footer-center i {
+      background-color: darkgreen;
+      color: #ffffff;
+      font-size: 25px;
+      width: 38px;
+      height: 38px;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 42px;
+      margin: 10px 15px;
+      vertical-align: middle;
+    }
+    .footer-distributed .footer-center i.fa-envelope {
+      font-size: 17px;
+      line-height: 38px;
+    }
+    .footer-distributed .footer-center p {
+      display: inline-block;
+      color: #ffffff;
+      font-weight: 400;
+      vertical-align: middle;
+      margin: 0;
+    }
+    .footer-distributed .footer-center p span {
+      display: block;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 2;
+    }
+    .footer-distributed .footer-center p a {
+      color: darkgreen;
+      text-decoration: none;
+    }
+    .footer-distributed .footer-links a:before {
+      content: "|";
+      font-weight: 300;
+      font-size: 20px;
+      left: 0;
+      color: darkgreen;
+      display: inline-block;
+      padding-right: 5px;
+    }
+    .footer-distributed .footer-links .link-1:before {
+      content: none;
+    }
+    /* Footer Right */
+    
+    .footer-distributed .footer-right {
+      width: 20%;
+    }
+    .footer-distributed .footer-company-about {
+      line-height: 20px;
+      color: #ffffff;
+      font-size: 13px;
+      font-weight: normal;
+      margin: 0;
+    }
+    .footer-distributed .footer-company-about span {
+      display: block;
+      color: #da;
+      font-size: 14px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    .footer-distributed .footer-icons {
+      margin-top: 25px;
+    }
+    .footer-distributed .footer-icons a {
+      display: inline-block;
+      width: 35px;
+      height: 35px;
+      cursor: pointer;
+      background-color: darkgreen;
+      border-radius: 2px;
+    
+      font-size: 20px;
+      color: #ffffff;
+      text-align: center;
+      line-height: 35px;
+    
+      margin-right: 3px;
+      margin-bottom: 5px;
+    }
+    /* Allows for the footer to be reponsive */
+    
+    @media (max-width: 880px) {
+      .footer-distributed {
+        font: bold 14px sans-serif;
+      }
+    
+      .footer-distributed .footer-left,
+      .footer-distributed .footer-center,
+      .footer-distributed .footer-right {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+    
+      .footer-distributed .footer-center i {
+        margin-left: 0;
+      }
+    }
+    
