--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -17,7 +17,7 @@
   .nav-links{
     width: 100%;
     color: #fff;
-    background-color: #484848;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;  
