--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -1,326 +1,345 @@
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Georgia;
+  margin: 0;
+  padding: 0;
+  font-family: Georgia;
+}
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(images/banner1.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+.nav-links{
+  width: 100%;
+  color: #fff;
+  background-color:white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+}
+.nav-menu ul{
+  display: flex;
+  padding-right: 30px;
+}
+.nav-menu ul li{
+  list-style: none;
+  padding: 15px 15px;
+}
+.nav-menu ul li a{
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  text-transform: uppercase;
+}
+.nav-menu ul li::after {
+  content: "";
+  width: 0%;
+  height: 3px;
+  background: green;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+.nav-menu ul li:hover::after {
+  width: 100%;
+}
+.toggle-btn{
+  position: absolute;
+  top: 50px;
+  right: 30px;
+  display: none;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 22px;
+  width: 32px;
+}
+.toggle-btn .bar{
+  height: 17%;
+  width: 100%;
+  background-color: green;
+  border-radius: 10px;
+}
+@media screen and (max-width: 768px) {
+  .toggle-btn{
+    display: flex;
   }
-  .header {
-    min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-      url(images/banner2.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
+  .nav-menu {
+    position: absolute;
+    background: #fff;
+    height: 300xp;
+    width: 200px;
+    top: 127px;
+    left: 0;
+    text-align:center;
+    z-index: 2;
+    transition: 2s;
+    display: none;
   }
   
-  .nav-links{
+  .nav-links {
+    color: white;
+    font-size: 22px;
     width: 100%;
-    color: #fff;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;  
+    flex-direction: column;
+    align-items: flex-start;
+
   }
-  .nav-menu ul{
-    display: flex;
-    padding-right: 30px;
+  .nav-menu ul {
+    padding-right: 0px;
+    width: 100%;
+    flex-direction: column;
   }
   .nav-menu ul li{
-    list-style: none;
-    padding: 15px 15px;
+    padding-left: 30px;
   }
   .nav-menu ul li a{
-    text-decoration: none;
-    font-size: 18px;
-    color: #fff;
-    text-transform: uppercase;
+    font-size: 17px;
+    color: black;
   }
-  .nav-menu ul li::after {
-    content: "";
-    width: 0%;
-    height: 3px;
-    background: green;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-  }
-  .nav-menu ul li:hover::after {
-    width: 100%;
-  }
-  .toggle-btn{
-    position: absolute;
-    top: 50px;
-    right: 30px;
-    display: none;
-    justify-content: space-between;
-    flex-direction: column;
-    height: 22px;
-    width: 32px;
-  }
-  .toggle-btn .bar{
-    height: 17%;
-    width: 100%;
-    background-color: green;
-    border-radius: 10px;
-  }
-  @media screen and (max-width: 768px) {
-    .toggle-btn{
-      display: flex;
-    }
-    .nav-menu {
-      position: absolute;
-      background: #fff;
-      height: 300xp;
-      width: 200px;
-      top: 127px;
-      left: 0;
-      text-align:center;
-      z-index: 2;
-      transition: 2s;
-      display: none;
-    }
+  .nav-menu.active{
+    display: flex;
     
-    .nav-links {
-      color: white;
-      font-size: 22px;
-      width: 100%;
-      flex-direction: column;
-      align-items: flex-start;
+  }
+}
 
-    }
-    .nav-menu ul {
-      padding-right: 0px;
-      width: 100%;
-      flex-direction: column;
-    }
-    .nav-menu ul li{
-      padding-left: 30px;
-    }
-    .nav-menu ul li a{
-      font-size: 17px;
-      color: black;
-    }
-    .nav-menu.active{
-      display: flex;
-      
-    }
-  }
+
+/*---BUG:Find out why header isnt fully centered---*/
+.text-box {
+  width: 100%;
+  color: azure;
+  position: absolute;
+  top: 35%;
+  left: 0%;
+  right: 0%;
+  text-align: center;
+}
+.text-box h1 {
+  font-size: 62px;
+}
+.text-box p {
+  margin: 10px 0 40px;
+  font-size: 16px;
+  color: azure;
+}
+.hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: azure;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.hero-btn:hover {
+  border: 1px solid green;
+  background: green;
+  transition: 1s;
+}
+
+
+
+/*---Introduction ---*/
+  /*About  UPDATED 3/31/2022*/
   
-  
-  /*---BUG:Find out why header isnt fully centered---*/
-  .text-box {
-    width: 100%;
-    color: azure;
-    position: absolute;
-    top: 35%;
-    left: 0%;
-    right: 0%;
-    text-align: center;
-  }
-  .text-box h1 {
-    font-size: 62px;
-  }
-  .text-box p {
-    margin: 10px 0 40px;
-    font-size: 16px;
-    color: azure;
-  }
-  .hero-btn {
-    display: inline-block;
-    text-decoration: none;
-    color: azure;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size: 13px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-  }
-  .hero-btn:hover {
-    border: 1px solid green;
-    background: green;
-    transition: 1s;
-  }
+  .about h6{
+    font-size: 14px;
+    color: #01012e;
+}
+.about .title-border{
+  content: "";
+  width: 30%;
+  height: 2px;
+  display: block;
+  background: block;
+  background-color: #01012e;
+  border-radius: 50%;
+  margin: 1%;
+ margin-left: 35%;
+}
+.about p{
+  font-size: 18px;
+  color: #01012e;
+
+}
+.fas{
+  color: #01012e;
+}
+.far{
+  color: #01012e;
+}
+/*END OF ABOUT US SECTION 3/31/2022*/ 
+
+/* Pictures of workers*/
+/*Project Section*/
+.projects{
+  background: green;
+  color: #fff;
+}
+.projects .title-border{
+  content: "";
+  width: 30%;
+  height: 2px;
+  display: block;
+  background: block;
+  background-color: #fff;
+  border-radius: 50%;
+  margin: 1%;
+  margin-left: 35%;
+}
+/*.main-container{
+  margin: -2px;
+}*/
+.project-container{
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: #000;
+  box-shadow: 0 10px 10px rgba(157, 255, 0, 0.959);
+  cursor: pointer;
  
 
+}/*Makes a card and 3d effects*/
+
+.project-container .img-content{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;/*CARD BODY*/
+  margin-bottom:10px;
+}
+
+.project-container .img-content img{
+  position: absolute;/*Hide the card Body*/
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+}
+.project-container:hover .img-content img{
+  opacity: 0;
   
-  /*---Introduction ---*/
-  .intro {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
-  }
-  
-  
-  .intro ul li {
-    list-style-type: none;
-    display: block;
-    padding: 12px 12px;
-    text-align: center;
-  }
-  .intro ul li a {
-    color: black;
-    text-decoration: none;
-    display: block;
-    font-size: 32px;
-    text-align: center;
-  }
-  .intro ul li::after {
-    content: "";
-    width: 20%;
-    height: 5px;
-    background: green;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-  }
-  .intro ul li:hover::after {
-    width: 100%;
-  }
-  h1 {
-    font-size: 30px;
-    font-weight: 600;
-    padding: 30px;
-  }
-  h2 {
-    font-size: 30px;
-    font-weight: 600;
-    padding: 30px;
-  }
-  p1 {
-    color: black;
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 22px;
-    padding: 30px;
-    padding-bottom: 30px;
-  }
-  .row {
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .more-info {
-    flex-basis: 20%;
-    font-size: 20px;
-    background: #009900;
-    border-radius: 20px;
-    margin-bottom: 5%;
-    box-sizing: border-box;
-    transition: 1s;
-  }
-  h3 {
-    text-align: center;
-    font-weight: 400;
-    margin: 10px 0;
-  }
-  .more-info:hover {
-    box-shadow: 0 0 70px 0px rgba(0, 0, 0, 0.2);
-  }
-  @media (max-width: 700px) {
-    .row {
-      flex-direction: column;
-    }
-  }
-  
-  /* Pictures of workers*/
-  .pictures {
-    text-align: center;
-    padding: 10px 12px;
-    background:darkgreen;
-    color: #fff;
-  }
-  .pictures ul li {
-    list-style-type: none;
-    display: block;
-    padding: 8px 12px;
-    text-align: center;
-  }
-  .pictures ul li a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    font-size: 32px;
-  }
-  .pictures ul li::after {
-    content: "";
-    width: 0%;
-    height: 5px;
-    background: gree;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-  }
-  .pictures ul li:hover::after {
-    width: 100%;
-  }
-  section div div img {
-    flex-basis: 32%;
-    border-radius: 20px;
-    margin-bottom: 30px;
-    width: 300px;
-    height: 400px;
-    padding: 10px 12px;
-  }
-  .pictures h4 {
-    font-size: 30px;
-    font-weight: 600;
-  }
-  
-  /*-- Clients--*/
-  .clients {
-    width: 80%;
-    margin: auto;
-  }
-  .clients .row {
-    display: inline;
-    flex-basis: 32%;
-    width: 300px;
-    height: 400px;
-  }
-  .clients ul li {
-    list-style-type: none;
-    text-align: center;
-    padding: 8px 12px;
-  }
-  .clients ul li a {
-    color: black;
-    text-decoration: none;
-    display: block;
-    font-size: 32px;
-  }
-  .clients ul li::after {
-    content: "";
-    width: 0%;
-    height: 5px;
-    background: green;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-  }
-  .clients ul li:hover::after {
-    width: 100%;
-  }
-  
-  .hero-btn-2 {
-    text-align: center;
-    display: inline-block;
-    text-decoration: none;
-    color: black;
-    border: 5px solid green;
-    padding: 12px 34px;
-    font-size: 20px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-  }
-  .hero-btn-2:hover {
-    border: 1px solid green;
-    background: green;
-    transition: 1s;
-  }
+}
+.project-container .content{
+  position: absolute;
+  bottom: 20px;
+  left: 10%;
+  width: 80%;
+  height: 60px;
+  background: #fff;
+  overflow: hidden;
+  padding: 15px;
+}
+.project-container:hover .content{
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+}
+.project-container .content h3{
+  font-size: 20px;
+
+}
+.project-container .content p{
+  margin: 10px 0 0;
+  opacity: 0;
+  line-height: 1.2em;
+  transition: 0.5s;
+  text-align: justify;
+}
+.project-container:hover  .content p{
+  opacity: 1;
+  transition-delay: 0.4s;
+}
+
+/*End of Project Section*/
+
+/*-- Clients--*/
+.clients h6{
+  font-size: 14px;
+  color: #01012e;
+}
+.clients .title-border{
+content: "";
+width: 30%;
+height: 2px;
+display: block;
+background: block;
+background-color: #01012e;
+border-radius: 50%;
+margin: 1%;
+margin-left: 35%;
+}
+.clients p{
+font-size: 18px;
+color: #01012e;
+
+}
+.fas{
+color: #01012e;
+}
+.far{
+color: #01012e;
+}
+.clients {
+  width: 80%;
+  margin: auto;
+}
+.clients .row {
+  display: inline;
+  flex-basis: 32%;
+  width: 300px;
+  height: 400px;
+}
+.clients ul li {
+  list-style-type: none;
+  text-align: center;
+  padding: 8px 12px;
+}
+.clients ul li a {
+  color: black;
+  text-decoration: none;
+  display: block;
+  font-size: 32px;
+}
+.clients ul li::after {
+  content: "";
+  width: 0%;
+  height: 5px;
+  background: green;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+.clients ul li:hover::after {
+  width: 100%;
+}
+
+.hero-btn-2 {
+  text-align: center;
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 5px solid green;
+  padding: 12px 34px;
+  font-size: 20px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.hero-btn-2:hover {
+  border: 1px solid green;
+  background: green;
+  transition: 1s;
+}
 .social{ 
   width: 100%;
   clear: both;
@@ -345,192 +364,192 @@
   transition: 1s ease;
   transform: rotate(360deg);
 }
-  
-  /* Footer */
+
+/* Footer */
+.footer-distributed {
+  background: rgb(22, 22, 22);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 55px 50px;
+}
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+/* Footer left */
+
+.footer-distributed .footer-left {
+  width: 40%;
+}
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
+  padding: 0;
+}
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  font-weight: 400;
+  text-decoration: none;
+  color: inherit;
+}
+.footer-distributed .footer-company-name {
+  color: white;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+/* Footer Center */
+
+.footer-distributed .footer-center {
+  width: 35%;
+}
+.footer-distributed .footer-center i {
+  background-color: darkgreen;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+.footer-distributed .footer-center i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+.footer-distributed .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  font-weight: 400;
+  vertical-align: middle;
+  margin: 0;
+}
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+.footer-distributed .footer-center p a {
+  color: darkgreen;
+  text-decoration: none;
+}
+.footer-distributed .footer-links a:before {
+  content: "|";
+  font-weight: 300;
+  font-size: 20px;
+  left: 0;
+  color: darkgreen;
+  display: inline-block;
+  padding-right: 5px;
+}
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+/* Footer Right */
+
+.footer-distributed .footer-right {
+  width: 20%;
+}
+.footer-distributed .footer-company-about {
+  line-height: 20px;
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+.footer-distributed .footer-company-about span {
+  display: block;
+  color: #da;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.footer-distributed .footer-icons {
+  margin-top: 25px;
+}
+.footer-distributed .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: darkgreen;
+  border-radius: 2px;
+
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+/* Allows for the footer to be reponsive */
+
+@media (max-width: 880px) {
   .footer-distributed {
-    background: rgb(22, 22, 22);
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: bold 16px sans-serif;
-    padding: 55px 50px;
+    font: bold 14px sans-serif;
   }
+
   .footer-distributed .footer-left,
   .footer-distributed .footer-center,
   .footer-distributed .footer-right {
-    display: inline-block;
-    vertical-align: top;
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
   }
-  /* Footer left */
-  
-  .footer-distributed .footer-left {
-    width: 40%;
-  }
-  .footer-distributed .footer-links {
-    color: #ffffff;
-    margin: 20px 0 12px;
-    padding: 0;
-  }
-  .footer-distributed .footer-links a {
-    display: inline-block;
-    line-height: 1.8;
-    font-weight: 400;
-    text-decoration: none;
-    color: inherit;
-  }
-  .footer-distributed .footer-company-name {
-    color: white;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-  }
-  /* Footer Center */
-  
-  .footer-distributed .footer-center {
-    width: 35%;
-  }
+
   .footer-distributed .footer-center i {
-    background-color: darkgreen;
-    color: #ffffff;
-    font-size: 25px;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 42px;
-    margin: 10px 15px;
-    vertical-align: middle;
+    margin-left: 0;
   }
-  .footer-distributed .footer-center i.fa-envelope {
-    font-size: 17px;
-    line-height: 38px;
-  }
-  .footer-distributed .footer-center p {
-    display: inline-block;
-    color: #ffffff;
-    font-weight: 400;
-    vertical-align: middle;
-    margin: 0;
-  }
-  .footer-distributed .footer-center p span {
-    display: block;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 2;
-  }
-  .footer-distributed .footer-center p a {
-    color: darkgreen;
-    text-decoration: none;
-  }
-  .footer-distributed .footer-links a:before {
-    content: "|";
-    font-weight: 300;
-    font-size: 20px;
-    left: 0;
-    color: darkgreen;
-    display: inline-block;
-    padding-right: 5px;
-  }
-  .footer-distributed .footer-links .link-1:before {
-    content: none;
-  }
-  /* Footer Right */
-  
-  .footer-distributed .footer-right {
-    width: 20%;
-  }
-  .footer-distributed .footer-company-about {
-    line-height: 20px;
-    color: #ffffff;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-  }
-  .footer-distributed .footer-company-about span {
-    display: block;
-    color: #da;
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  .footer-distributed .footer-icons {
-    margin-top: 25px;
-  }
-  .footer-distributed .footer-icons a {
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    background-color: darkgreen;
-    border-radius: 2px;
-  
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    line-height: 35px;
-  
-    margin-right: 3px;
-    margin-bottom: 5px;
-  }
-  /* Allows for the footer to be reponsive */
-  
-  @media (max-width: 880px) {
-    .footer-distributed {
-      font: bold 14px sans-serif;
-    }
-  
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-center,
-    .footer-distributed .footer-right {
-      display: block;
-      width: 100%;
-      margin-bottom: 40px;
-      text-align: center;
-    }
-  
-    .footer-distributed .footer-center i {
-      margin-left: 0;
-    }
-  }
-  
-  /*About us page: Quienes Somos---*/
-  .sub-header {
-    height: 60vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-      url(images/banner.jpg);
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    color: azure;
-  }
-  .sub-header h1 {
-    width: 100%;
-    color: azure;
-    position: absolute;
-    top: 30%;
-    left: 0%;
-    right: 10%;
-    text-align: center;
-    font-size: 50px;
-  }
-  .about-us{  
-      width: 80%;
-      margin: auto;
-      padding-top: 80px;
-      padding-bottom: 50px;
-  }
-  .about-col{ 
-      flex-basis: 48%;
-      padding: 30px 2px;
-  }
-  .about-col img{ 
-      width: 10%;
-  }
-  .about-col p{  
-      padding-top: 0;
-  }
-  .about-col h1{ 
-    padding: 15px 0 25px;  
-  }
+}
+
+/*About us page: Quienes Somos---*/
+.sub-header {
+  height: 60vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(images/banner.jpg);
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  color: azure;
+}
+.sub-header h1 {
+  width: 100%;
+  color: azure;
+  position: absolute;
+  top: 30%;
+  left: 0%;
+  right: 10%;
+  text-align: center;
+  font-size: 50px;
+}
+.about-us{  
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.about-col{ 
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+.about-col img{ 
+    width: 10%;
+}
+.about-col p{  
+    padding-top: 0;
+}
+.about-col h1{ 
+  padding: 15px 0 25px;  
+}
