--- a/Enerpetrol1/servicosstyle.css
+++ b/Enerpetrol1/servicosstyle.css
@@ -18,7 +18,7 @@
 .nav-links{
     width: 100%;
     color: #fff;
-    background-color: #484848;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;  
@@ -34,7 +34,7 @@
   .nav-menu ul li a{
     text-decoration: none;
     font-size: 18px;
-    color: #fff;
+    color: black;
     text-transform: uppercase;
   }
   .nav-menu ul li::after {
