--- a/Enerpetrol1/projectlink.css
+++ b/Enerpetrol1/projectlink.css
@@ -13,7 +13,7 @@
     color: #fff;
     background-color:white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;  
   }
   .nav-menu ul{
@@ -110,7 +110,7 @@
     flex-wrap: wrap;
 }
 .col{
-    margin: 20px 0;
+    margin: 120px 0;
     flex-basis: 50%;
     min-width: 300px;
     height: 100%;
@@ -118,7 +118,7 @@
 }
 .text-box{
     max-width: 400px;
-    margin-top: 100px;
+    margin-top: 0px;
     font-size: 20px;
 }
 .text-box h5{
@@ -214,6 +214,7 @@ padding: .30cm;
     font-size: 14px;
     font-weight: normal;
     margin: 0;
+    padding-top: 15px;
   }
   /* Footer Center */
   
