--- a/Enerpetrol1/projectsstyle.css
+++ b/Enerpetrol1/projectsstyle.css
@@ -13,7 +13,7 @@
     color: #fff;
     background-color:white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;  
   }
   .nav-menu ul{
