--- a/Enerpetrol1/projectlink.css
+++ b/Enerpetrol1/projectlink.css
@@ -6,6 +6,9 @@
   .header {
     min-height: 100vh;
     width: 100%;
+    background: linear-gradient(45deg, darkgreen, #000000);
+      color: #fff;
+    position: relative;
   }
 .logo {
     padding-left: 2%;
@@ -72,7 +75,7 @@
   .toggle-btn .bar{
     height: 17%;
     width: 100%;
-    background-color: green;
+    background-color: lightgreen;
     border-radius: 10px;
   }
   @media screen and (max-width: 768px) {
@@ -159,7 +162,7 @@ padding-top: .30cm;
 }
  .gallery-box img{
     width: 100%;
-    border: 10px solid rgba(0,128,0);
+    border: 10px solid rgb(255, 255, 255);
     box-sizing: border-box;
  }
  .gallery-box ul{
@@ -178,7 +181,7 @@ padding-top: .30cm;
     position: relative;
   }
  .gallery-box .active{
-    color: green;
+    color: white;
  }
  .gallery-box ul li::after{
     content: '';
