white footer text

--- a/Enerpetrol1/projectlink.css
+++ b/Enerpetrol1/projectlink.css
@@ -142,7 +142,7 @@
     font-size: 20px;
 }
 .text-box h1{
-    color: green;
+    color: white;
 }
 
 .paragraph{
@@ -271,7 +271,7 @@ padding-top: .30cm;
   line-height: 2;
 }
 .footer-distributed .footer-left p a {
-  color: darkgreen;
+  color: white;
   text-decoration: none;
 }
 .footer-distributed .footer-links a:before {
