--- a/Enerpetrol1/servicosstyle.css
+++ b/Enerpetrol1/servicosstyle.css
@@ -405,7 +405,7 @@
   line-height: 2;
 }
 .footer-distributed .footer-left p a {
-  color: darkgreen;
+  color: white;
   text-decoration: none;
 }
 .footer-distributed .footer-links a:before {
