--- a/Enerpetrol1/aboutstyle.css
+++ b/Enerpetrol1/aboutstyle.css
@@ -368,7 +368,7 @@
   line-height: 2;
 }
 .footer-distributed .footer-left p a {
-  color: darkgreen;
+  color: white;
   text-decoration: none;
 }
 .footer-distributed .footer-links a:before {
