--- a/Enerpetrol1/contactstyle.css
+++ b/Enerpetrol1/contactstyle.css
@@ -371,7 +371,7 @@ body
   line-height: 2;
 }
 .footer-distributed .footer-left p a {
-  color: darkgreen;
+  color: white;
   text-decoration: none;
 }
 .footer-distributed .footer-links a:before {
