--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -447,7 +447,7 @@ color: #01012e;
   line-height: 2;
 }
 .footer-distributed .footer-left p a {
-  color: darkgreen;
+  color: white;
   text-decoration: none;
 }
 .footer-distributed .footer-links a:before {
